fixed spacing, added css styling for animation page

--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -20,7 +20,7 @@ margin: Top Right Bottom Left;
 * {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 body {
@@ -62,7 +62,7 @@ body {
 nav {
   top: 0;
   left: 0;
-  top: -3rem; /* Posiyion of navbar at top of page */
+  top: -4.5rem; /* Posiyion of navbar at top of page */
   border-top: 0;
   z-index: 100;
   position: fixed;
@@ -71,8 +71,8 @@ nav {
 }
 
 header.top{
-  padding-top: 6rem;
-  padding-bottom: 4rem;
+  padding-top: 8rem;
+  padding-bottom: 2rem;
 }
 
 .topH {
@@ -110,7 +110,7 @@ details {
 
 details:not([open]) {
     transition: 1s;
-    height: 2rem;
+    height: 4rem;
 }
 
 details:not([open]) p {
@@ -120,7 +120,7 @@ details:not([open]) p {
 details[open]
 {
     transition: 1s;
-    height: 4.5rem;
+    height: 6.5rem;
 
 }
 
@@ -147,18 +147,20 @@ summary:focus {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
-
-
-
 
 .content {
   font-size: 1.5rem;
   /* margin-left: 10rem;
   margin-right: 10rem; */
   width: 80%;
+  padding-top: 3rem;
+  padding-bottom: 4rem;
   /* overflow: auto; */
+}
+
+.tag {
+  padding: 7rem;
 }
 
 .indexScroll {
@@ -176,9 +178,9 @@ summary:focus {
   background-position: 50% -20%;
   height: 100%;
 
-  /* display: flex;
+  display: flex;
   align-items: center;
-  justify-content: center; */
+  justify-content: center;
 }
 
 /* Menu Buttons */
@@ -186,7 +188,7 @@ ul.menu {
   height: 5rem;
   list-style-type: none;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: rgb(0, 0, 0);
   /* overflow: hidden; */
   /* display: inline-block; */
@@ -201,15 +203,15 @@ li.menuSpacing {
 }
 
 ul.menu li.menuSpacing a {
-  height: 5rem;
+  height: 7rem;
   padding: 0 2rem 0.8rem 2rem;
-  width: 4em;
+  width: 7rem;
   text-align: center;
   display: flex;
   justify-content: center; /* align horizontal */
   align-items: flex-end;; /* align vertical */
-  border-bottom-right-radius: 30%;
-  border-bottom-left-radius: 30%;
+  border-bottom-right-radius: 25%;
+  border-bottom-left-radius: 25%;
   background-color: rgba(255, 255, 255, 0.80); /*Background color of tabs*/
 }
 
@@ -230,7 +232,7 @@ ul.menu li.menuSpacing a#active {
   /* position: relative; */
   padding: 1rem 2rem;
   margin: 1rem 2rem 1rem 2rem;
-  width: 8rem;
+  width: 12rem;
   border: none;
   border-radius: 2rem;
   font-size: 1.7rem;
@@ -290,11 +292,42 @@ a.button:hover {
   width: 50rem;
   border-radius: 2rem;;
   margin: auto;
+  margin-bottom: 2.5rem;
   padding-top: 9rem;
   padding-bottom: 4rem;
-  Background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.vid {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+}
+
+.file {
+  width: 50%;
+  margin-right: 1.5rem;
+  /* padding-right: 2rem; */
 
 }
+
+.vid video {
+  width: 100%;
+  height: 100%;
+  border-radius: 2rem;
+}
+
+.vidDesc {
+  padding: 2rem;
+  width: 50%;
+
+  margin-left: 1.5rem;
+  background-color: rgba(0, 0, 0, 0.75);
+  border-radius: 2rem;
+
+}
+
 
 #icons {
   display: inline-block;
@@ -330,7 +363,7 @@ a.button:hover {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin: 1rem 0rem;
+  margin: 1.5rem 0rem;
 }
 
 .icon a {
@@ -340,8 +373,8 @@ a.button:hover {
   font-size: 170%;
   width: 4rem;
   height: 4rem;
-  padding: 0;
-  padding: 0.2rem;
+  /* padding: 0.2rem; */
+  padding: 0rem;
   margin: 0;
   margin-right: 1rem;
   background-color: rgb(222, 11, 220);
@@ -349,8 +382,24 @@ a.button:hover {
 }
 
 .icon img {
-  height: 5rem;
+  /* heigt: 5rem; */
+  height: 100%;
   border-radius: 50%;
+}
+
+.icon.thanks {
+  flex-direction: column;
+  padding: 2rem;
+  /* margin: 0; */
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 2rem;
+}
+
+.thanksName {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 footer {
